# sinkattn

./: .gitignore  README.md  pyproject.toml  requirements.txt
sinkattention/: __init__.py  pooling_kernel.py  sparse_attention.py  timing.py
wanx/: __init__.py
wanx/offline/: __init__.py  calibrate_sink_sparse.py
wanx/prompts/: inference_prompts.txt
wanx/prompts/calibration/: sink_calibration_wanx_v1.txt
wanx/runtime/: __init__.py  fast_misc.py  inference.py  modify_wan.py  sink_sparse_wan.py  wan_model_loader.py
wanx/scripts/: run_sink_calibration.sh  run_sink_inference.sh  runtime_env.sh
zimg/: __init__.py  model_spec.py
zimg/offline/: __init__.py  calibrate_sink_sparse.py
zimg/prompts/: calibration_4p.txt  inference_prompts.txt
zimg/runtime/: __init__.py  inference.py  modify_zimage.py  sink_profiles.py  sink_sparse_zimage.py
zimg/scripts/: run_sink_calibration.sh  run_sink_inference.sh  runtime_env.sh
