[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sinkattention"
version = "0.1.0"
description = "Train-free SinkAttention runtimes and offline calibration for Wan and Z-Image."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["sinkattention", "wanx", "wanx.runtime", "wanx.offline", "zimg", "zimg.runtime", "zimg.offline"]
include-package-data = false

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
wanx = ["prompts/**/*.txt", "scripts/*.sh"]
zimg = ["prompts/**/*.txt", "scripts/*.sh"]
